objects/hed__Course_Offering__c.object
<CustomObject><fields>
        <fullName>LWC_Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LWC Tutor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Current_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supports Current Course Offering Report functionality.</description>
        <label>Current Term</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Hilltop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-Presidio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santa Rosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleasanton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Degree Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Course_Reference_Number__c</fullName>
        <label>Course Reference Number</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Currently_Enrolled__c</fullName>
        <description>Number of students enrolled</description>
        <label>Currently Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>tmpCourseAccountName__c</fullName>
        <formula>hed__Course__r.College__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tmpCourseAccountName</label>
        <type>Text</type>
    </fields><fields>
        <fullName>tmpActive__c</fullName>
        <formula>IF(TODAY() &gt;= hed__Term__r.hed__Start_Date__c &amp;&amp; TODAY() &lt;= hed__Term__r.hed__End_Date__c, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tmpActive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Term__c</fullName>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>hed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>SI_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SI Session</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>PLTL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PLTL</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Offering_Type__c</fullName>
        <description>Lecture, Online, etc</description>
        <label>Offering Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fieldwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-paced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>hed__Section_ID__c</fullName>
        <label>Section ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Faculty</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Courses_Taught</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__Course__c</fullName>
        <label>Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>hed__Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tutoring</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SI Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLTL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>hed__HEDA_Course_Offering_Compact_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><deprecated>false</deprecated><description>Joins Courses and Terms to contain information related to a single occurrence of a course.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Course Offering</label><nameField>
        <label>Course Offering ID</label>
        <type>Text</type>
    </nameField><pluralLabel>Course Offerings</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>tmpCourseAccountName__c</columns>
        <columns>Active__c</columns>
        <columns>hed__Capacity__c</columns>
        <columns>hed__Course__c</columns>
        <columns>hed__Faculty__c</columns>
        <columns>Level__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Campus__c</columns>
        <columns>LWC_Tutor__c</columns>
        <columns>hed__Term__c</columns>
        <columns>Currently_Enrolled__c</columns>
        <columns>PLTL__c</columns>
        <columns>SI_Session__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>hed__Term__c</field>
            <operation>equals</operation>
            <value>Fall 2016</value>
        </filters>
        <label>Fall 2016</label>
    </listViews><listViews>
        <fullName>Intersession_2017</fullName>
        <columns>NAME</columns>
        <columns>tmpCourseAccountName__c</columns>
        <columns>Active__c</columns>
        <columns>Campus__c</columns>
        <columns>hed__Capacity__c</columns>
        <columns>hed__Course__c</columns>
        <columns>hed__Faculty__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>LWC_Tutor__c</columns>
        <columns>hed__Term__c</columns>
        <columns>Currently_Enrolled__c</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>hed__Term__c</field>
            <operation>equals</operation>
            <value>Intersession 2017</value>
        </filters>
        <label>Intersession 2017</label>
    </listViews><listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>tmpCourseAccountName__c</columns>
        <columns>Active__c</columns>
        <columns>hed__Capacity__c</columns>
        <columns>hed__Course__c</columns>
        <columns>hed__Faculty__c</columns>
        <columns>LWC_Tutor__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>hed__Term__c</columns>
        <columns>Currently_Enrolled__c</columns>
        <columns>Current_Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>LWC_Course_Offering</fullName>
        <active>true</active>
        <label>LWC Course Offering</label>
    </recordTypes><recordTypes>
        <fullName>Banner_Course_Offering</fullName>
        <active>true</active>
        <label>Banner Course Offering</label>
    </recordTypes></CustomObject>